# noba-ce

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  backup-notify.sh  backup-to-nas.sh  backup-verifier.sh  checksum.sh  cloud-backup.sh  config-check.sh  debug-failures.sh  disk-sentinel.sh  docker-compose.yml  final-clean.sh  final-touch.sh  finalize.sh  fix-all-syntax.sh  fix-remaining.sh  fix-test-failures.sh  hardcore-fix.sh  images-to-pdf.sh  install.sh  log-rotator.sh  master-fix.sh  motd-generator.sh  noba  noba-completion.sh  noba-cron-setup.sh  noba-daily-digest.sh  noba-dashboard.sh  noba-lib.sh  noba-setup.sh  noba-tui.sh  noba-update.sh  (+19 more)
.claude/: compact-context.md  settings.json
.github/: SECURITY.md  dependabot.yml
alembic/: env.py  script.py.mako
backup-20260316-080405/: install.sh
backup-20260316-084056/: install.sh
backup-20260316-085936/: install.sh
backup-20260316-090057/: install.sh
dev/: crossref.py  e2e.py  eye.py  harness.sh  recon.py  smoke.py  trace.py
docs/: README.md  api.md  configuration.md  enterprise-setup.md  index.md  noba-web.1  noba.1  package-lock.json  proof-of-concept-enterprise.md  proof-of-concept.md  troubleshooting.md  user-guide.md
lib/: noba-lib.sh  noba-web-functions.sh
libexec/: backup-notify.sh  backup-to-nas.sh  backup-verifier.sh  checksum.sh  cloud-backup.sh  config-check.sh  disk-sentinel.sh  images-to-pdf.sh  log-rotator.sh  motd-generator.sh  noba-cli.sh  noba-completion.sh  noba-cron-setup.sh  noba-daily-digest.sh  (+11 more)
(+645 files in other folders)
