[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noba-web"
version = "1.12.0"
description = "NOBA Command Center – system monitoring and automation dashboard"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "psutil>=5.9.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
