[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noba-web"
version = "2.0.0"
description = "NOBA Command Center – system monitoring and automation dashboard"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.27.1",
    "psutil>=5.9.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "websocket-client>=1.7",
    "cryptography>=41.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
